Changelog for smtpd-starttls-proxy.

In 0.1.0.0
----------

 - New binary: qmail-remote.


In 0.0.2.1
----------

 - Support for shared libraries on MacOS.


In 0.0.2.0
----------

 - Bugfixes.
 - pkg-config support.


In 0.0.1.5
----------

 - Align to rest of skaware.


In 0.0.1.4
----------

 - Drop the -01 option to s6-ioconnect invocation.


In 0.0.1.3
----------

 - Adaptation to skalibs-2.14.0.0.
 - Bugfixes.


In 0.0.1.2
----------

 - Adaptation to skalibs-2.13.0.0.


In 0.0.1.1
----------

 - Bugfixes.


In 0.0.1.0
----------

 - Initial release.