@@ -6,7 +6,7 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.14.5.1 or later: https://skarnet.org/software/skalibs/
+  - skalibs version 2.14.5.2 or later: https://skarnet.org/software/skalibs/
   - s6 version 2.14.0.1 or later: https://skarnet.org/software/s6/
   - s6-networking version 2.7.2.1 or later: https://skarnet.org/software/s6-networking/
 
