@@ -22,7 +22,7 @@
 
 <ul>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
-dependency bumped to 2.14.5.1 </li>
+dependency bumped to 2.14.5.2 </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
 dependency bumped to 2.14.0.1 </li>
  <li> New dependency: <a href="//skarnet.org/software/s6-dns/">s6-dns</a> 2.4.1.1 </li>
