@@ -1,4 +1,4 @@
-true	true	/package/prog/skalibs		2.14.5.1	libskarnet
+true	true	/package/prog/skalibs		2.14.5.2	libskarnet
 true	false	/package/admin/s6		2.14.0.1	libs6
 true	false	/package/web/s6-dns		2.4.1.1		libs6dns
 true	false	/package/net/s6-networking	2.7.2.1
